# ChangeLog for app-portage/autounmask
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-portage/autounmask/ChangeLog,v 1.36 2009/04/15 18:41:29 ian Exp $

*autounmask-0.26 (15 Apr 2009)

  15 Apr 2009; Christian Hartmann <ian@gentoo.org> -autounmask-0.15.ebuild,
  -autounmask-0.21.ebuild, -autounmask-0.25.ebuild, +autounmask-0.26.ebuild:
  Bump & cleanup

*autounmask-0.25 (03 Apr 2009)

  03 Apr 2009; Christian Hartmann <ian@gentoo.org> +autounmask-0.25.ebuild:
  Version bump

  19 Jan 2009; Jeroen Roovers <jer@gentoo.org> autounmask-0.23.ebuild:
  Stable for HPPA (bug #252687).

  06 Jan 2009; Dawid Węgliński <cla@gentoo.org> autounmask-0.23.ebuild:
  Stable on amd64 (bug #252687)

  29 Dec 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  autounmask-0.23.ebuild:
  ppc stable, bug #252687

  29 Dec 2008; Raúl Porcel <armin76@gentoo.org> autounmask-0.23.ebuild:
  ia64/sparc/x86 stable wrt #252687

*autounmask-0.23 (01 Dec 2008)

  01 Dec 2008; Christian Hartmann <ian@gentoo.org> +autounmask-0.23.ebuild:
  Version bump

  18 Nov 2008; Torsten Veller <tove@gentoo.org> autounmask-0.15.ebuild,
  autounmask-0.21.ebuild:
  New virtuals: Term-ANSIColor

  02 Jul 2008; Javier Villavicencio <the_paya@gentoo.org>
  autounmask-0.21.ebuild:
  Add ~x86-fbsd wrt bug #214440

  27 Nov 2007; Raúl Porcel <armin76@gentoo.org> autounmask-0.21.ebuild:
  ia64 stable wrt #200264

  26 Nov 2007; Jeroen Roovers <jer@gentoo.org> autounmask-0.21.ebuild:
  Stable for SPARC (bug #200264).

  26 Nov 2007; Jeroen Roovers <jer@gentoo.org> autounmask-0.21.ebuild:
  Stable for HPPA (bug #200264).

  26 Nov 2007; Brent Baude <ranger@gentoo.org> autounmask-0.21.ebuild:
  Marking autounmask-0.21 ppc for bug 200264

  25 Nov 2007; Christian Faulhammer <opfer@gentoo.org>
  autounmask-0.21.ebuild:
  stable x86, bug 200264

  25 Nov 2007; Samuli Suominen <drac@gentoo.org> autounmask-0.21.ebuild:
  amd64 stable wrt #200264
