@@ -2,7 +2,9 @@ AUX autounmask-0.23-prefix.patch 1598 RMD160 f24a0d97c3cc9e5ce210a8f7e47e9341ed5
 AUX autounmask-0.26-prefix.patch 1670 RMD160 f1b41b355a9ac491fe5ccf9e874601b2f1db57e5 SHA1 8db5028461e325cfd20f33800f9e08f9c4db7714 SHA256 d08ac54a89c285eff27da2d4147405f5d5ce28cd4f2e6d5b4f6f6ddf3df68f97
 DIST autounmask-0.23.tar.gz 3428 RMD160 71d2c0c9f498b089eb67938e95be2bd0571dea98 SHA1 52dc9d128fbeafd5088b54aca22580b18515d51b SHA256 6192b93a59d6a3e8e44953d0d5373830c2e3a1ca7c1f06a8bb6aed1ce1ba7a19
 DIST autounmask-0.26.tar.gz 3930 RMD160 f6ca3bdf7ab8c65c31e04231e8b46441dd799e19 SHA1 c53d719deda571b94f8c591d0ed94af52f923715 SHA256 729c808ac044ec3b8ad9a7b3d1cba7096bb4f62597448798ae0e3ded6a2e5366
+DIST autounmask-0.27.tar.gz 4062 RMD160 910ab0a692ad88d192050c7445ee8446135ab8c8 SHA1 a144b759a3015a7e19134c2e23dce91f8d9cf4e7 SHA256 44cac25ac4546099901e58289eb73e2a9990c1f454a8dec14c972c2df13bb277
 EBUILD autounmask-0.23.ebuild 886 RMD160 b1271f60ac4a78099eb81e76bafd469e49e8d151 SHA1 ed2d520c72d19af79bfe19953eacd3796b69f8fd SHA256 4a243871c78033a65bfa048a39b1e6495cff27b9bf7ff1805d7f363761b03b6b
 EBUILD autounmask-0.26.ebuild 886 RMD160 eba892ba2b7ff4d8256d86f2d2278d864731064f SHA1 7858b023e42afea152421e91622ae78e9bd677c5 SHA256 083e2af8df7e42913d0f14a38e3c139bc0b529e96e8d8ae3f9a864d6d4d7d7c2
-MISC ChangeLog 4599 RMD160 64de32b05daf295db1c0ffd388109a64a900325d SHA1 2933e734aa03f5cc700e0e9f3851f0bd5ed9a9a6 SHA256 fa5eb6e63138a95a3e7163425739928ddd7e886dbcf24a47c981fd5fb5d7ee34
+EBUILD autounmask-0.27.ebuild 892 RMD160 52427ac7804746baefd2361447ae4f8ef0c7201a SHA1 4dfd3e2d47721119e80c11f6078761db86f165ab SHA256 137dd164cbfaf8dd7fa14c67d703bb3b5288c05df3741bc38429b9f320bfe30b
+MISC ChangeLog 4759 RMD160 f83247bff34dcd921f74b5a91d2618b908e2e6c6 SHA1 b5804e1fea086620e257caeb5b1349dab6ab8c78 SHA256 2d03dc7864cd359f7a3e5808b2aed0c9c936a2406d7b99dfaa763e1c91ac4e59
 MISC metadata.xml 330 RMD160 fba8122e5b8f9b99ac07d19bbaf4f511deb8965c SHA1 38e4ea13ca38651b8b347dad77072c57e26b778e SHA256 d7823ba4eb9c361a153bc06aa30a6e307a50ff2d581d1aeed03c0dd46572e4fe
